--- a/front-end/package.json
+++ b/front-end/package.json
@@ -1,8 +1,7 @@
 {
   "name": "front-end",
   "version": "0.1.0",
-  "proxy":"http://localhost:5000",
-  
+  "proxy": "http://localhost:5000",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
@@ -11,6 +10,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
+    "serve": "^14.2.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
