--- a/back-end/package.json
+++ b/back-end/package.json
@@ -14,5 +14,8 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.21.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.7"
   }
 }
